tests/coverage-output.txt

> tadpole-os@0.0.0 test:coverage
> vitest run --coverage


[1m[46m RUN [49m[22m [36mv4.0.18 [39m[90mC:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os[39m
      [2mCoverage enabled with [22m[33mv8[39m

(node:38664) Warning: `--localstorage-file` was provided without a valid path
(Use `node --trace-warnings ...` to show where the warning was created)
 [31mΓ¥»[39m tests/handoff.test.ts [2m([22m[2m1 test[22m[2m | [22m[31m1 failed[39m[2m)[22m[32m 10[2mms[22m[39m
[31m     [31m├ù[31m successfully receives a handoff from another cluster[39m[32m 8[2mms[22m[39m
[90mstdout[2m | tests/server/runner.test.ts
[22m[39m≡ƒÅ¢∩╕Å  [Governor] Service Activated. Monitoring network throughput.

TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > renders the dashboard with stats and pending actions
The above error occurred in the <OversightDashboard> component:

    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.

TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > displays the disconnection banner when server fails
The above error occurred in the <OversightDashboard> component:

    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.

TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > calls the decision endpoint when approving an action
The above error occurred in the <OversightDashboard> component:

    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.

TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > filters the ledger based on search input
The above error occurred in the <OversightDashboard> component:

    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.

TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
TypeError: Cannot convert undefined or null to object
    at Object.values (<anonymous>)
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:372:29)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > triggers the kill switch when button is clicked
The above error occurred in the <OversightDashboard> component:

    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.

stderr | src/pages/ModelManager.test.tsx > ModelManager Page > Vault Locking Logic > calls unlock when entering passphrase and clicking unlock
Warning: An update to ModelManager inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at ModelManager (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/ModelManager.tsx:25:79)

 [31mΓ¥»[39m src/pages/OversightDashboard.test.tsx [2m([22m[2m5 tests[22m[2m | [22m[31m5 failed[39m[2m)[22m[32m 103[2mms[22m[39m
[31m     [31m├ù[31m renders the dashboard with stats and pending actions[39m[32m 44[2mms[22m[39m
[31m     [31m├ù[31m displays the disconnection banner when server fails[39m[32m 6[2mms[22m[39m
[31m     [31m├ù[31m calls the decision endpoint when approving an action[39m[32m 40[2mms[22m[39m
[31m     [31m├ù[31m filters the ledger based on search input[39m[32m 5[2mms[22m[39m
[31m     [31m├ù[31m triggers the kill switch when button is clicked[39m[32m 6[2mms[22m[39m
stderr | src/pages/Missions.test.tsx > Missions Page > renders the mission management header
Warning: An update to Missions inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at Missions (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/Missions.tsx:30:87)

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould return text response immediately
[22m[39m≡ƒöä Turn 1: Generating...

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39m≡ƒöä Turn 1: Generating...

stderr | src/pages/Missions.test.tsx > Missions Page > displays the new cluster modal when clicking New Mission
Warning: An update to Missions inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at Missions (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/Missions.tsx:30:87)

 [32mΓ£ô[39m tests/server/crypto.test.ts [2m([22m[2m4 tests[22m[2m)[22m[33m 899[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m produces different ciphertexts for the same message (unique IV/Salt) [33m 330[2mms[22m[39m
 [32mΓ£ô[39m src/pages/ModelManager.test.tsx [2m([22m[2m6 tests[22m[2m)[22m[33m 572[2mms[22m[39m
[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39m≡ƒöÆ Requesting oversight for tool: 18d8ec3b-b970-4377-b014-104c6715783d (test-skill)

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39mΓÜÖ∩╕Å Executing skill: test-skill

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39m≡ƒöä Turn 2: Generating...

 [32mΓ£ô[39m src/pages/EngineDashboard.test.tsx [2m([22m[2m4 tests[22m[2m)[22m[33m 777[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m updates progress bar widths based on metrics [33m 483[2mms[22m[39m
stderr | src/pages/Missions.test.tsx > Missions Page > includes Marketing and Design in the department dropdown
Warning: An update to Missions inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at Missions (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/Missions.tsx:30:87)

 [32mΓ£ô[39m src/pages/Missions.test.tsx [2m([22m[2m3 tests[22m[2m)[22m[33m 1056[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m includes Marketing and Design in the department dropdown [33m 817[2mms[22m[39m
[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould handle provider errors gracefully
[22m[39m≡ƒöä Turn 1: Generating...

stderr | tests/server/runner.test.ts > AgentRunner > should handle provider errors gracefully
Runner Error: Error: API Rate Limit
    at C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/tests/server/runner.test.ts:97:40
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:145:11
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:915:26
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1243:20
    at new Promise (<anonymous>)
    at runWithTimeout (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1209:10)
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1653:37
    at Traces.$ (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/vitest/dist/chunks/traces.CCmnQaNT.js:142:27)
    at trace (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/vitest/dist/chunks/test.B8ej_ZHS.js:239:21)
    at runTest (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1653:12)

 [32mΓ£ô[39m tests/server/runner.test.ts [2m([22m[2m3 tests[22m[2m)[22m[33m 1582[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m should execute tool call and loop back [33m 1027[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m should handle provider errors gracefully [33m 521[2mms[22m[39m
 [32mΓ£ô[39m src/pages/Settings.test.tsx [2m([22m[2m4 tests[22m[2m)[22m[33m 428[2mms[22m[39m
 [32mΓ£ô[39m tests/server/skills/fs.test.ts [2m([22m[2m4 tests[22m[2m)[22m[32m 61[2mms[22m[39m
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
[90mstdout[2m | tests/server/phase30.test.ts
[22m[39m≡ƒÅ¢∩╕Å  [Governor] Service Activated. Monitoring network throughput.

 [32mΓ£ô[39m src/components/ErrorBoundary.test.tsx [2m([22m[2m4 tests[22m[2m)[22m[32m 256[2mms[22m[39m
 [32mΓ£ô[39m tests/server/oversight.test.ts [2m([22m[2m3 tests[22m[2m)[22m[32m 15[2mms[22m[39m
[90mstdout[2m | tests/server/phase30.test.ts[2m > [22m[2mPhase 30: System Intelligence Verification[2m > [22m[2mMission-Aware Oversight[2m > [22m[2mshould propagate clusterId from runner to oversight
[22m[39m≡ƒöä Turn 1: Generating...

[90mstdout[2m | tests/server/phase30.test.ts[2m > [22m[2mPhase 30: System Intelligence Verification[2m > [22m[2mMission-Aware Oversight[2m > [22m[2mshould propagate clusterId from runner to oversight
[22m[39m≡ƒöÆ Requesting oversight for tool: e4e5c906-e0a4-4907-816a-1def30a29e58 (test-skill)

 [32mΓ£ô[39m tests/server/phase30.test.ts [2m([22m[2m4 tests[22m[2m)[22m[32m 28[2mms[22m[39m
 [32mΓ£ô[39m tests/commandProcessor.test.ts [2m([22m[2m7 tests[22m[2m)[22m[32m 12[2mms[22m[39m
 [32mΓ£ô[39m src/services/workspaceStore.test.ts [2m([22m[2m4 tests[22m[2m)[22m[32m 11[2mms[22m[39m
 [32mΓ£ô[39m tests/eventBus.test.ts [2m([22m[2m6 tests[22m[2m)[22m[32m 7[2mms[22m[39m
 [32mΓ£ô[39m tests/settingsStore.test.ts [2m([22m[2m6 tests[22m[2m)[22m[32m 8[2mms[22m[39m
 [32mΓ£ô[39m src/services/providerStore.test.ts [2m([22m[2m3 tests[22m[2m)[22m[32m 4[2mms[22m[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 6 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  tests/handoff.test.ts > Mission Handoffs > successfully receives a handoff from another cluster
TypeError: storage.setItem is not a function
 Γ¥» Object.setItem ../../../../../Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/zustand/esm/middleware.mjs:298:42
 Γ¥» setItem ../../../../../Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/zustand/esm/middleware.mjs:358:20
 Γ¥» ../../../../../Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/zustand/esm/middleware.mjs:371:14
 Γ¥» Object.receiveHandoff src/services/workspaceStore.ts:277:80
    275|             })),
    276| 
    277|             receiveHandoff: (sourceClusterId, targetClusterId, descripΓÇª
       |                                                                                ^
    278|                 clusters: state.clusters.map(c =>
    279|                     c.id === targetClusterId ? {
 Γ¥» tests/handoff.test.ts:25:15

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/6]ΓÄ»

 FAIL  src/pages/OversightDashboard.test.tsx > OversightDashboard Page > renders the dashboard with stats and pending actions
 FAIL  src/pages/OversightDashboard.test.tsx > OversightDashboard Page > displays the disconnection banner when server fails
 FAIL  src/pages/OversightDashboard.test.tsx > OversightDashboard Page > calls the decision endpoint when approving an action
 FAIL  src/pages/OversightDashboard.test.tsx > OversightDashboard Page > filters the ledger based on search input
 FAIL  src/pages/OversightDashboard.test.tsx > OversightDashboard Page > triggers the kill switch when button is clicked
TypeError: Cannot convert undefined or null to object
 Γ¥» OversightDashboard src/pages/OversightDashboard.tsx:372:29
    370|                 </div>
    371|                 <div className="p-6">
    372|                     {Object.values(activeProposals).length > 0 ? (
       |                             ^
    373|                         <div className="grid grid-cols-1 gap-6">
    374|                             {Object.values(activeProposals).map((propoΓÇª
 Γ¥» renderWithHooks node_modules/react-dom/cjs/react-dom.development.js:16305:18
 Γ¥» mountIndeterminateComponent node_modules/react-dom/cjs/react-dom.development.js:20074:13
 Γ¥» beginWork node_modules/react-dom/cjs/react-dom.development.js:21587:16
 Γ¥» beginWork$1 node_modules/react-dom/cjs/react-dom.development.js:27426:14
 Γ¥» performUnitOfWork node_modules/react-dom/cjs/react-dom.development.js:26560:12
 Γ¥» workLoopSync node_modules/react-dom/cjs/react-dom.development.js:26466:5
 Γ¥» renderRootSync node_modules/react-dom/cjs/react-dom.development.js:26434:7
 Γ¥» recoverFromConcurrentError node_modules/react-dom/cjs/react-dom.development.js:25850:20

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/6]ΓÄ»


[2m Test Files [22m [1m[31m2 failed[39m[22m[2m | [22m[1m[32m15 passed[39m[22m[90m (17)[39m
[2m      Tests [22m [1m[31m6 failed[39m[22m[2m | [22m[1m[32m65 passed[39m[22m[90m (71)[39m
[2m   Start at [22m 18:32:38
[2m   Duration [22m 13.02s[2m (transform 3.19s, setup 5.61s, import 7.05s, tests 5.83s, environment 45.18s)[22m

